fix dark mode icon transition

--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -173,9 +173,26 @@ body.dark li a:hover:before {
     color: var(--text-color-rever);
 }
 
+/*.nav-links li a,*/
+/*.nav-links li .link-name-current {*/
+/*    color: var(--primary-color);*/
+/*}*/
+
 nav.close li a .link-name {
     opacity: 0;
     pointer-events: none;
+}
+
+nav .logout-mod .uil {
+    opacity: 0;
+    pointer-events: none;
+    transition: var(--tran-05);
+}
+
+nav.close .logout-mod .uil {
+    opacity: 1;
+    pointer-events: none;
+    transition: var(--tran-05);
 }
 
 .nav-links li a:hover i,
@@ -290,6 +307,7 @@ nav.close ~ .dashboard .top {
 .shop-name:hover {
     color: var(--text-color-rever);
     transition: 1s;
+    cursor: default;
 }
 
 .top .search-box input {
